Update TOC, fix details block

--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -1,11 +1,5 @@
 <style>
-  .red {
-      color: red;
-  }
-  .larger {
-      font-size: larger;
-  }
-  .box {
+  .toc_box {
       border: 1px solid black;
       padding: 10px;
       margin: 10px;
@@ -13,7 +7,7 @@
 </style>
 
 
-<nav class="box">
+<nav class="toc_box">
   <h4> **Table of Contents** </h4>
   * this gets replaced by a ul by kramdown
   {:toc}
