--- a/_layouts/tutorial.html
+++ b/_layouts/tutorial.html
@@ -8,6 +8,7 @@ layout: default
       color: black;
       border: 3px solid #535353;
       margin: 0px auto;
+      margin-bottom: 10px;
       padding: 10px;
   }
 </style>
